about section fully completed and hero section mobile view image overflow issue solved by making the container width to 95%

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -59,9 +59,9 @@ i {
 
 // Common Blocks
 .container {
-  margin: auto;
+  margin: 0 auto;
   width: 90%;
-  // border: 1px solid red;
+  border: 1px solid red;
 }
 
 .flex-wrapper,
