--- a/scss/main.scss
+++ b/scss/main.scss
@@ -276,7 +276,7 @@
 
   &__wrapper {
     align-items: center;
-    gap: 20px;
+    gap: 50px;
   }
 
   &__left,
@@ -319,7 +319,12 @@
     &-text {
       // flex: 1;
 
+      .wrap h2 {
+        font-size: clamp(24px, 4vw + 1rem, 35px);
+      }
+
       .typewrite {
+        display: inline-block;
         font-size: 20px;
         font-weight: 700;
         color: $accent-clr;
@@ -347,7 +352,7 @@
       align-items: center;
       padding: 40px 0 30px;
         // width: 600px;
-        border: 2px solid;
+        // border: 2px solid;
       mask-image: linear-gradient( to right,rgba(0, 0, 0, 0),
         rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0));
 
